--- a/css/styles.css
+++ b/css/styles.css
@@ -5,49 +5,42 @@
 body {
     margin: 0;
     overflow: hidden;
-    /* background-color: paleturquoise; */
+    background-color: red;
 }
 
-img {
-    height: 100%;
-    /* background-color: red; */
+
+/* ANGLE BUTTONS */
+#angle-container {
+    display: flex;
+    position: absolute;
 }
 
-/* CSS */
 .angle {
     width: 100px;
-    align-items: center;
-    appearance: none;
+    height: 40px;
+
+    margin-left: 6px;
+    margin-right: 6px;
+
     background-color: #FCFCFD;
+    
     border-radius: 4px;
     border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
-    box-sizing: border-box;
-    color: #36395A;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+                rgba(45, 35, 66, 0.3) 0 7px 13px -3px,
+                #D6D6E7 0 -3px 0 inset;
+
     cursor: pointer;
-    display: inline-flex;
-    font-family: "JetBrains Mono",monospace;
-    height: 48px;
-    justify-content: center;
-    line-height: 1;
-    list-style: none;
-    overflow: hidden;
-    padding-left: 16px;
-    padding-right: 16px;
-    position: relative;
-    text-align: left;
-    text-decoration: none;
-    transition: box-shadow .15s,transform .15s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    will-change: box-shadow,transform;
-    font-size: 18px;
+    outline: none;
+
+    transition: box-shadow .15s, transform .15s;
 }
   
 .angle:focus {
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    box-shadow: #D6D6E7 0 0 0 1.5px inset,
+               rgba(45, 35, 66, 0.4) 0 2px 4px,
+               rgba(45, 35, 66, 0.3) 0 7px 13px -3px,
+                #D6D6E7 0 -3px 0 inset;
 }
   
 .angle.active {
@@ -55,52 +48,12 @@ img {
     transform: translateY(2px);
 }
 
-#menu {
-    width: 200px;
-    height: 400px;
-    background-color: #0000008e;
-    opacity: 1;
-    font-family: 'Roboto', sans-serif;
-    color: white;
-    overflow-y: scroll;
-}
-
-h3, h4 {
-    text-align: center;
-}
-
-#menu > section {
-    border: 2px solid black;
-}
-
-::-webkit-scrollbar {
-    width: 10px;
-    height: 20px;
-}
-
-::-webkit-scrollbar-track {
-    background-color: lightgray;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: gray;
+.angle > img {
+    height: 100%;
 }
 
 
-
-#presets-container {
-    background-color: #FF3D00;
-    /* position: absolute; */
-}
-
-.preset {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-
-.preset:nth-child(1) { background-color: blue }
-.preset:nth-child(2) { background-color: red }
+/* LOADER */
 
 #loader-container {
     position: absolute;
